--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,42 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.v4.widget.SwipeRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/swipeRefreshLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <ListView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/listWithButtons"
+        android:layout_height="wrap_content"
+        android:id="@+id/linearLayout"
+        android:weightSum="2"
         android:orientation="horizontal">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
 
-        <Button
+        <ImageButton
             android:id="@+id/cameraRemote"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
             android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_height="match_parent"
             android:layout_marginLeft="15dip"
-
             android:layout_marginRight="10dip"
             android:padding="28dip"
-            android:text="Camera remote" />
+            android:text="@string/camera" />
+        </LinearLayout>
 
-
-        <Button
+        <LinearLayout
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:layout_weight="1">
+        <ImageButton
             android:id="@+id/dataRemote"
-            android:layout_width="169dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_marginLeft="10dip"
-
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
             android:layout_marginRight="15dip"
             android:layout_toRightOf="@id/cameraRemote"
             android:padding="28dip"
-            android:text="Data remote" />
-
-
-    </ListView>
+            android:text="@string/data" />
+        </LinearLayout>
+    </LinearLayout>
 </android.support.v4.widget.SwipeRefreshLayout>
