--- a/app/src/main/res/layout/camera_remote.xml
+++ b/app/src/main/res/layout/camera_remote.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:id="@+id/relativeLayout"
     >
-<com.google.android.cameraview.CameraView
+<SurfaceView
     android:id="@+id/cameraArduinoView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"/>
